objects/Bot_Command__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apex_Class__c</fullName>
        <label>Apex Class</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cal_Time__c</fullName>
        <label>Cal Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Pattern__c</fullName>
        <label>Invocation Pattern</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sample_Utterance__c</fullName>
        <label>Sample Utterance</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StDa__c</fullName>
        <label>StDa</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Test_Field__c</fullName>
        <label>Test Field Demo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>Bot Command</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Pattern__c</columns>
        <columns>Apex_Class__c</columns>
        <columns>Active__c</columns>
        <columns>Sample_Utterance__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Command Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bot Commands</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>VR1</fullName>
        <active>true</active>
        <errorConditionFormula>$Profile.Name = &quot;Admin&quot;</errorConditionFormula>
        <errorMessage>Error msg</errorMessage>
    </validationRules>
</CustomObject>